--- a/trunk/ prova2-programacao-web/progWebProva2/WebContent/WEB-INF/messages.properties
+++ b/trunk/ prova2-programacao-web/progWebProva2/WebContent/WEB-INF/messages.properties
@@ -2,7 +2,8 @@
 #override @Pattern default message
 NotEmpty.item.descricao=Descrição não pode ser nula!
 Size.item.descricao=Descrição deve ter mais de 2 caracteres!
-#NotEmpty.contato.email=Email deve ser preenchido!
-#Size.contato.email=Email deve ter mais de 5 caracteres!
-#NotEmpty.contato.endereco=Endereço deve ser preenchido!
-#Pattern.contato.email=Email deve ter o formato: palavra@palavra.palavra!
+NotEmpty.pedido.solicitante=Solicitante deve ser preenchido!
+NotEmpty.pedido.emailSolicitante=Email deve ser preenchido!
+Pattern.pedido.emailSolicitante=Email deve ter o formato: palavra@palavra.palavra!
+Size.pedido.numeroPedido=Numero do pedido deve ter 6 caracteres!
+Pattern.pedido.numeroPedido=Numero do pedido deve ter apenas numeros!
